[feature] Improve fn:parse-json XQuery 4.0 compliance (75% → 97%)
Reworks JSON.java to thread a single ParseOptions bundle through the
recursive parser so all XQuery 4.0 options take effect consistently for
fn:parse-json, fn:json-doc and fn:json-to-xml.

What changes:

* Default duplicates is now use-first (XPath/XQuery 3.1 §17.5.1 / 4.0
  PR2096); 'retain' is rejected for parse-json/json-doc.
* Empty options sequence is allowed: parse-json(json, ()).
* New 'null' option supplies the replacement value (or sequence) used
  for JSON null in parse-json results, including multi-item sequences.
* 'escape' option is now honoured for parse-json: control chars,
  backslash and characters not allowed in XML are re-encoded with JSON
  escape sequences. Quote chars are not re-escaped (per QT4 fixtures
  json-to-xml-049 / json-doc-012 / parse-json-107).
* 'fallback' is invoked for chars that cannot appear in XML in both
  parse-json keys and values, with full validation of return cardinality
  and FOTY0013 when a function item is returned.
* 'number-parser' is invoked for parse-json numeric tokens; multi-item
  results raise XPTY0004; arity is no longer pre-validated, matching
  PR975 fixtures.
* 'escape' and 'fallback' together raise FOJS0005 (spec §22.3.2).
* In XQuery 4.0 mode, unknown options (including 'spec' and 'validate')
  raise XPTY0004; in 3.1 mode they are silently accepted.
* Strings with characters not allowed in XML are normalised with U+FFFD
  in parse-json output when no fallback is supplied.

Test results (QT4 fn-parse-json on v2/xq4-core-functions):
  before: 142/188 (75.5%), 46 failures
  after : 182/188 (96.8%), 6 failures (Phase 2 gate ≥80% / ≤30)

The remaining 6 failures are out of scope for parse-json: a Jackson
leading-zero edge case (716), a parser closure-capture bug (731),
JSON serializer of magic-null QName (746/747), and an error-code
QName formatting mismatch (943).

No regressions in fn-json-to-xml, fn-json-doc, or fn-xml-to-json on
this branch.